--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
             <a class="navbar-brand" href="{{ site.baseurl }}/">
-                <span><img src="{{site.baseurl}}/img/American-Summer-Camps-Logo.png"></span> {{ "方博士硅谷研学" }}
+                <span><img src="{{site.baseurl}}/img/company_logo_2.png"></span> {{ "方博士硅谷研学" }}
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
