--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
 
-        <p class="text-center">&copy;{{ site.time | date: '%Y' }} {{ site.title }}, All Rights Reserve</a></p>
+        <h5 class="text-center">&copy;{{ site.time | date: '%Y' }} {{ site.title }}, All Rights Reserve</a></h5>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
     </div>
 </footer>
