--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -13,7 +13,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/行程概括/" | prepend: site.baseurl }}">详细方案</a></li>
+                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/行程特色/" | prepend: site.baseurl }}">详细方案</a></li>
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/我要报名/" | prepend: site.baseurl }}">我要报名</a></li>
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/夏令营图片介绍/" | prepend: site.baseurl }}">夏令营图片介绍</a></li>
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/历年夏令营成果/" | prepend: site.baseurl }}">历年夏令营成果</a></li>
