--- a/css/main.scss
+++ b/css/main.scss
@@ -57,6 +57,9 @@ body {
   margin-top:20px;
   font-size:17px;
 }
+#markdown-content-container h1{
+  font-size:30px;
+}
 
 .header-container {
   background-color: black;
