--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -17,7 +17,7 @@
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/我要报名/" | prepend: site.baseurl }}">我要报名</a></li>
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/夏令营图片介绍/" | prepend: site.baseurl }}">夏令营图片介绍</a></li>
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/夏令营历年成果/" | prepend: site.baseurl }}">夏令营历年成果</a></li>
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/创始人介绍/" | prepend: site.baseurl }}">创始人介绍</a></li>
+                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/创办人介绍/" | prepend: site.baseurl }}">创办人介绍</a></li>
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/联系我们/" | prepend: site.baseurl }}">联系我们</a></li>
             </ul>
         </div>
