--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,7 @@ html {
 body {
   padding-top: $navbar-height + $navbar-margin-bottom;
   margin-bottom: 46px;
-  font-family: 'Microsoft JhengHei';
+  font-family: 'Arial';
 }
 
 .navbar-brand{
@@ -47,21 +47,21 @@ body {
 #markdown-content-container li{
   font-size: 16px;
   margin-top:12px;
-  font-family: 'Microsoft JhengHei';
+  font-family: 'Arial';
 }
 
 #markdown-content-container h4{
-  font-family: 'Microsoft JhengHei';
+  font-family: 'Arial';
   margin-top:40px;
 }
 
 #markdown-content-container h5{
-  font-family: 'Microsoft JhengHei';
+  font-family: 'Arial';
   margin-top:20px;
   font-size:17px;
 }
 #markdown-content-container h1{
-  font-family: 'Microsoft JhengHei';
+  font-family: 'Arial';
   font-size:30px;
 }
 
@@ -72,7 +72,7 @@ body {
 
   h1 {
     color: #fff;
-    font-family: 'Microsoft JhengHei';
+    font-family: 'Arial';
   }
   // background-attachment: fixed;
   background-size: cover;
@@ -111,9 +111,9 @@ body {
   top:10px
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-family: 'Microsoft JhengHei';
+    font-family: 'Arial';
 }
 
 h1 {
-    font-family: 'Microsoft JhengHei';
+    font-family: 'Arial';
 }
