--- a/css/main.scss
+++ b/css/main.scss
@@ -115,5 +115,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 h1 {
-    font-family: 'Arial';
+  font-family: 'Arial';
+  font-size: 250%;
 }
