--- a/css/main.scss
+++ b/css/main.scss
@@ -73,6 +73,7 @@ body {
   h1 {
     color: #fff;
     font-family: 'Arial';
+    font-size: 250%;
   }
   // background-attachment: fixed;
   background-size: cover;
