--- a/css/main.scss
+++ b/css/main.scss
@@ -120,7 +120,7 @@ h1 {
   font-size: 250%;
 }
 
-#markdown-content-container table{
+#markdown-content-container table, td, th{
   border: 1px solid;
 }
 
