--- a/css/main.scss
+++ b/css/main.scss
@@ -124,10 +124,10 @@ h1 {
   border: 1px solid;
 }
 
-#markdown-content-container td{
+#customers td{
   border: 1px solid;
 }
 
-#markdown-content-container th{
+#customers th{
   border: 1px solid;
 }
