--- a/css/main.scss
+++ b/css/main.scss
@@ -122,12 +122,15 @@ h1 {
 
 #markdown-content-container table, td, th{
   border: 1px solid;
+  text-align: center;
 }
 
 #customers td{
   border: 1px solid;
+  text-align: center;
 }
 
 #customers th{
   border: 1px solid;
+  text-align: center;
 }
