--- a/css/main.scss
+++ b/css/main.scss
@@ -123,14 +123,17 @@ h1 {
 #markdown-content-container table, td, th{
   border: 1px solid;
   text-align: center;
+  vertical-align: middle
 }
 
 #customers td{
   border: 1px solid;
   text-align: center;
+  vertical-align: middle
 }
 
 #customers th{
   border: 1px solid;
   text-align: center;
+  vertical-align: middle
 }
